impelement comment repository and post repository

--- a/src/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
+++ b/src/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;Database=SocialMedia;User Id=sa;password=M0h@mm@d;trusted_connection=true;encrypt=false"
+    "SqlServer": "Server=localhost,1433;Database=SocialMedia;User Id=sa;password=M0h@mm@d;TrustServerCertificate=True"
   }
 }
