--- a/src/SM-Post/Post.Query/Post.Query.Infrastructure/Post.Query.Infrastructure.csproj
+++ b/src/SM-Post/Post.Query/Post.Query.Infrastructure/Post.Query.Infrastructure.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Post.Query.Domain\Post.Query.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ConfigLibrary\" />
+  </ItemGroup>
+
 </Project>
