impelementing event consumer

--- a/src/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
+++ b/src/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
@@ -7,5 +7,12 @@
   },
   "ConnectionStrings": {
     "SqlServer": "Server=localhost,1433;Database=SocialMedia;User Id=sa;password=M0h@mm@d;TrustServerCertificate=True"
+  },
+  "ConsumerConfig": {
+    "GroupId": "SM_Consumer",
+    "BootstrapServers": "loacalhost:9092",
+    "EnableAutoCommit": false,
+    "AutoOffsetReset": "Earliest",
+    "AllowAutoCreateTopics": true
   }
 }
